Upgrade to Java 17 compatibility, replaced Lombok with Java Records in test classes, bumped Assembler version to 0.3.2